--- a/example/index.htm
+++ b/example/index.htm
@@ -14,11 +14,7 @@
 $(function(){
 	$('.date').datePicker({
 		week_name:['日','一','二','三','四','五','六'],
-		month_name:['1月','2月','3月','4月','5月','6月','7月','8月','9月','10月','11月','12月'],
-		success:function(date){
-			//dateTargetField.value=date.length?date[0]+'-'+date[1]+'-'+date[2]:'';
-			alert(date);
-		}
+		month_name:['1月','2月','3月','4月','5月','6月','7月','8月','9月','10月','11月','12月']
 	});
 })
 </SCRIPT>
@@ -32,6 +28,8 @@ $(function(){
 <hr>
 Date I: <input class="date" name="interview_time" type="text" size="12" value="2010-12-25"></br>
 Date II: <input class="date" name="caseStart_time" type="text" size="12"></br>
+Gender: <input class="date" type="radio" name="gender" value="0"> 女
+<input class="date" type="radio" name="gender" value="1"> 男<br>
 Multiple Date: <input name="multi_date" type="text" size="80">
 </form>
 </body>
