--- a/example/index.htm
+++ b/example/index.htm
@@ -15,7 +15,8 @@ $(function(){
 	$('.date').datePicker({
 		weekName:['日','一','二','三','四','五','六'],
 		monthName:['1月','2月','3月','4月','5月','6月','7月','8月','9月','10月','11月','12月'],
-		taiwan:true
+		taiwan:true,
+		taiwanPrefix:true
 	});
 })
 </SCRIPT>
